# SCORM-Testing

./: .gitignore  AUDIT_AND_REMEDIATION_PLAN_2026-06-23.md  AUDIT_AND_REMEDIATION_PLAN_2026-06-26.md  COURSE_CREATION_SYSTEM.md  HARVEST_NOTES.md  Nova_Course_Builder_Complete_Guide.md  OPERATOR_GUIDE.md  README.md  REPEATABILITY_AND_PORTABILITY.md  START-HERE.md  build  build.bat  pyproject.toml  requirements.txt
.githooks/: pre-commit
Frontend construction request/: .thumbnail  Course Builder.dc.html
Test Files/: CourseBuilder_Leadership_Highlight_Reel_2026-06-26.md
brand/: brand.json  tokens.css
dashboard/: index.html  launch.bat  launch.command  launch.ps1  server.py
demo/: vantage-onboarding.md
player/: player.css  player.js
sales/: index.html  pitch-deck.md
schema/: ASSET_PIPELINE.md  IMAGE_LAYOUT_PATTERNS.md  IR_SCHEMA.md  QC_GATE.md  RISE_PARITY_BLOCKS.md  ir.schema.json
src/: authoring.py  blocks.py  brand.py  build_report.py  buildlog.py  chart_svg.py  cli.py  cmi5.py  common.py  cover.py  docx_import.py  docx_review.py  ir_validate.py  layouts.py  md_import.py  pptx_animate.py  pptx_export.py  pptx_transitions.py  prompts.py  render.py  rise_import.py  scorm.py  scorm_lint.py  slide_layouts.py  slide_svg.py
templates/: AUTHORING_GUIDE.md  README.md  _skeleton.md  concept-explainer.md  decision-scenario.md  objection-handling.md  onboarding-company.md  onboarding-role.md  policy-acceptable-use.md  sales-rep-onboarding.md  software-procedure.md  template-editor.html
tests/: conftest.py  test_block_registry.py  test_branching_blocks.py  test_build_report.py  test_chart_guardrail.py  test_course_presets.py  test_deck_presets.py  test_image_layouts.py  test_layout_crossfeed.py  test_lint_validation.py  test_md_roundtrip.py  test_multiselect_kc.py  test_new_layouts.py  test_objectives_block.py  test_player.js  test_pptx_animate.py  test_pptx_drop.py  test_provider_model_ui.py  test_regen_scope.py  test_render_snapshot.py  test_robustness_polish.py  test_schema.py  test_scorm_manifest.py  test_server_endpoints.py  test_slide_svg.py  (+3 more)
(+42 files in other folders)
